modMonitor-2.2.1-beta
================================
- Added context filter
- Minor bugfixes


modMonitor-2.2.0-beta
================================
- Added parents for request and items
- Added filters
- Added items tree interface
- Minor bugfixes
- Added exclude contexts setting
- Added min time setting
- Added truncate button


modMonitor-2.1.0-beta
================================
- Added pdoParser support
- Added from_cache flag in statistic
- Minor bugfix


modMonitor-2.0.0-beta
================================
- Added visual interface in manager panel
- Added log user_id


modMonitor-1.0.0-beta
================================
- First release